# knowrob-semantic-map-msgs

./: CMakeLists.txt  changelog  package.xml
msg/: SemMap.msg  SemMapAction.msg  SemMapObject.msg  SemMapTask.msg
