<package>
  <name>knowrob_semantic_map_msgs</name>
  <version>1.0.1</version>
  <description>
    Message definitions for generating the OWL description of semantic
    maps from ROS.
  </description>
  <maintainer email="ralf.kaestner@gmail.com">Ralf Kaestner</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/mod_semantic_map</url>

  <author>Moritz Tenorth</author>
  <author>Ralf Kaestner</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosjava_messages</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rosjava_messages</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
